Native OOME on fastdebug VM on Solaris

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • hs25
    • Affects Version/s: hs24, hs25
    • Component/s: hotspot
    • Environment:

      scaaa002, Intel x86 2893 MHz, 32 cores, 256G, Solaris / Solaris 11, i86pc

    • b49
    • x86
    • solaris

        There are a bunch of concurrency related tests failed during PIT of hs25-b31 for jdk8-b89

        There are two OOME messages observed:
        1. Due to JDK-7045180
        ;; Using jvm: "/bpool/local/aurora/sandbox/sca/vmsqe/jdk/pit/2013-05-03-151437.amurillo.hs25-b31-snapshot/fastdebug/solaris-amd64/jre/lib/amd64/server/libjvm.so"
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (0xe0000000), pid=6716, tid=44
        # Error: An uncaught C++ exception
        #
        # JRE version: Java(TM) SE Runtime Environment (8.0-b87) (build 1.8.0-ea-fastdebug-b87)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (25.0-b31-internal-201305031514.amurillo.hs25-b31-snapshot-fastdebug compiled mode solaris-amd64 compressed oops)
        # Core dump written. Default location: /bpool/local/aurora/sandbox/results/ResultDir/DirectByteBufferAtomicityTests_ByteTest/core or core.6716
        #
        # If you would like to submit a bug report, please visit:
        # http://bugreport.sun.com/bugreport/crash.jsp
        #

        2.
        #
        # Out of Memory Error (/opt/jprt/T/P1/151437.amurillo/s/src/share/vm/memory/allocation.cpp:374), pid=7008, tid=31
        #
        # JRE version: Java(TM) SE Runtime Environment (8.0-b87) (build 1.8.0-ea-fastdebug-b87)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (25.0-b31-internal-201305031514.amurillo.hs25-b31-snapshot-fastdebug compiled mode solaris-amd64 compressed oops)
        # Core dump written. Default location: /bpool/local/aurora/sandbox/results/ResultDir/DirectByteBufferAtomicityTests_IntTest/core or core.7008
        #

        The problem looks the same as in JDK-7197666

              Assignee:
              Jon Masamitsu (Inactive)
              Reporter:
              Pavel Punegov
              Votes:
              0 Vote for this issue
              Watchers:
              10 Start watching this issue

                Created:
                Updated:
                Resolved: