8013938: Native OOME on fastdebug VM on Solaris

Reviewed-by: azeemj, brutisso, kvn, tschatzl